--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,8 +1,21 @@
-body{
-    background-color: rgb(125, 152, 152);
+body {
+    background: rgb(195, 130, 83);
+
 }
-button{
-    background-color: rgb(60, 138, 234);
-    border-radius: 10%;
-    color: aliceblue;
+
+#header {
+    background: linear-gradient(to right, rgb(219, 163, 148), rgb(3, 2, 0));
+    color: rgb(33, 15, 7);
 }
+
+#main {
+    display: flex;
+    justify-content: left
+}
+
+#five-days {
+    display: flex;
+    
+}
+
+button,
